# lab06hw

./: CMakeLists.txt  CPackConfig.cmake  LICENSE  README.md
.github/workflows/: build.yml  tag.yml  tags.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
